--- a/404.md
+++ b/404.md
@@ -1,1 +1,4 @@
+---
+permalink: /404.html
+---
 ### I am **404%** sure that [in this place](alex-soft-r.github.io) that you will find the Android developer that you have been dreaming about for so long
